--- a/test/test_level.conf
+++ b/test/test_level.conf
@@ -4,3 +4,5 @@ default format	=		"%V %v %m%n"
 TRACE = 30, LOG_DEBUG
 [rules]
 my_cat.TRACE		>stdout;
+[address]
+restful url = "http://localhost:8080/data/pages=1.idex"
