--- a/test/test_level.conf
+++ b/test/test_level.conf
@@ -3,6 +3,8 @@ default format	=		"%V %v %m%n"
 [levels]
 TRACE = 30, LOG_DEBUG
 [rules]
-my_cat.TRACE		>stdout;
+#my_cat.TRACE		>stdout;
+restful:my_cat.TRACE    [http://localhost:8080/data/pages=1.idex]
+my_cat.TRACE		"level.log"
 [address]
 restful url = "http://localhost:8080/data/pages=1.idex"
