add restful's method in conf. update configure options in conf file.

--- a/test/test_level.conf
+++ b/test/test_level.conf
@@ -4,7 +4,8 @@ default format	=		"%V %v %m%n"
 TRACE = 30, LOG_DEBUG
 [rules]
 #my_cat.TRACE		>stdout;
-restful:my_cat.TRACE    [http://localhost:8080/data/pages=1.idex]
-my_cat.TRACE		"level.log"
+my_cat.TRACE		"level.log",20MB*12
+put:my_cat.*    [http://localhost:8080/data/pages=1.idex]
+#post:my_cat.TRACE    [http://localhost:8080/data/pages=1.idex]
 [address]
 restful url = "http://localhost:8080/data/pages=1.idex"
