目前还有很多内容没有开发完毕,暂时提交一个临时提交记录 [尝试修改配置文件编写规则,并设计一个新的读取配置文件内容的功能. ]

--- a/test/test_level.conf
+++ b/test/test_level.conf
@@ -1,10 +1,15 @@
 [global]
-default format	=		"%V %v %m%n"
-[levels]
-TRACE = 30, LOG_DEBUG
+db="192.168.10.10:5432;"
+log="level.log"
+report="http://localhost:8088/database/post"
+
+[classification]
+debug= log
+info=log
+warn=log,db,report
+error=log,db,report
+fatal=log,db,report
+
 [rules]
-#my_cat.TRACE		>stdout;
-restful:my_cat.TRACE    [http://localhost:8080/data/pages=1.idex]
-my_cat.TRACE		"level.log"
-[address]
-restful url = "http://localhost:8080/data/pages=1.idex"
+*.fatal     >stdout;
+restful:*.warn    [http://localhost:8080/data/pages=1.idex]
